package com.nanyin.pattern.bridge;

public interface Colors {
    public void paint();
}
